testsuite/bad/bad007.jl
int main() {
        int x;
        int x;
	return 0 ;
}
